Disabled splash screen

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Bryan Keane's Portfolio" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://kryanbeane.github.io/" />
-    <meta name="description" content="Ashutosh's Personal Portfolio Website" property="og:description">
+    <meta name="description" content="Bryan's Personal Portfolio Website" property="og:description">
     <meta name="description" content="/icons/desc.png" property="og:image">
     <meta name="keywords" content="Bryan, PortFolio, Bryan's Portfolio" />
     <meta name="author" content="Bryan" />
